<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/color_white"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".activity.SettingActivity">

    <include layout="@layout/common_titlebar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/setting_contactour"
                android:textColor="@color/colorPrimary"
                android:textSize="15dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:background="@drawable/btn_gridview"
                android:orientation="vertical"
                android:paddingTop="15dp"
                android:paddingBottom="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_cooperate"
                    android:textColor="@color/colorPrimary"
                    android:textSize="17dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:text="@string/setting_cooperate_inside"
                    android:textColor="@color/color_dark_grey"
                    android:textSize="15dp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/line" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/setting_notice"
                android:textColor="@color/colorPrimary"
                android:textSize="15dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:background="@drawable/btn_gridview"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/btn_gridview"
                    android:orientation="vertical"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/setting_notice_push"
                        android:textColor="@color/color_black"
                        android:textSize="17dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:text="@string/setting_notice_article"
                        android:textColor="@color/color_dark_grey"
                        android:textSize="15dp" />
                </LinearLayout>

                <com.suke.widget.SwitchButton
                   android:id="@+id/switch_button_post"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="15dp"
                    app:sb_checked="true" />
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/line" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/setting_share"
                android:textColor="@color/colorPrimary"
                android:textSize="15dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:background="@drawable/btn_gridview"
                android:orientation="horizontal">

                <LinearLayout

                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/btn_gridview"
                    android:orientation="vertical"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/setting_clickborad"
                        android:textColor="@color/color_black"
                        android:textSize="17dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:text="@string/setting_clickborad_url"
                        android:textColor="@color/color_dark_grey"
                        android:textSize="15dp" />
                </LinearLayout>

                <com.suke.widget.SwitchButton
                    android:id="@+id/switch_button_monitor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="15dp"
                    app:sb_checked="true"/>
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/line" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:background="@drawable/btn_gridview"
                android:orientation="vertical"
                android:paddingTop="15dp"
                android:paddingBottom="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_other"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/btn_gridview"
                    android:text="@string/setting_updata"
                    android:textColor="@color/color_black"
                    android:textSize="17dp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/line" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:background="@drawable/btn_gridview"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:text="@string/setting_clearcache"
                android:textColor="@color/color_black"
                android:textSize="17dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/line" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:background="@drawable/btn_gridview"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:text="@string/setting_share_friend"
                android:textColor="@color/color_black"
                android:textSize="17dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/line" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:background="@drawable/btn_gridview"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:text="@string/setting_givemark"
                android:textColor="@color/color_black"
                android:textSize="17dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/line" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:background="@drawable/btn_gridview"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:text="@string/setting_about"
                android:textColor="@color/color_black"
                android:textSize="17dp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
